ajout nouvelles photos

--- a/index.html
+++ b/index.html
@@ -341,11 +341,18 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/realisations/logos/fire-pro.jpg" class="img-fluid" alt="">
+              <img src="assets/img/realisations/logos/IMG-20220619-WA0007.jpg" class="img-fluid" alt="">
+              <img src="assets/img/realisations/logos/IMG-20220619-WA0009.jpg" class="img-fluid" alt="">
+              <img src="assets/img/realisations/logos/IMG-20220715-WA0002.jpg" class="img-fluid" alt="">
+              <img src="assets/img/realisations/logos/IMG-20220716-WA0015.jpg" class="img-fluid" alt="">
+              
+
               <div class="portfolio-info">
                 <h4>App 1</h4>
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="assets/img/realisations/logos/fire-pro.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/realisations/logos/IMG-20220619-WA0009.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
