ajout de nouveaux logos

--- a/index.html
+++ b/index.html
@@ -345,6 +345,16 @@
               <img src="assets/img/realisations/logos/IMG-20220619-WA0009.jpg" class="img-fluid" alt="">
               <img src="assets/img/realisations/logos/IMG-20220715-WA0002.jpg" class="img-fluid" alt="">
               <img src="assets/img/realisations/logos/IMG-20220716-WA0015.jpg" class="img-fluid" alt="">
+              <img src="assets/img/realisations/logos/IMG-20220716-WA0034.jpg" class="img-fluid" alt="">
+              <img src="assets/img/realisations/logos/IMG-20220716-WA0026.jpg" class="img-fluid" alt="">
+              <img src="assets/img/realisations/logos/IMG-20220716-WA0030.jpg" class="img-fluid" alt="">
+              <img src="assets/img/realisations/logos/IMG-20221201-WA0001.jpg" class="img-fluid" alt="">
+              <img src="assets/img/realisations/logos/IMG-20220716-WA0040.jpg" class="img-fluid" alt="">
+              <img src="assets/img/realisations/logos/IMG-20220716-WA0022.jpg" class="img-fluid" alt="">
+              <img src="assets/img/realisations/logos/IMG-20221201-WA00023.jpg" class="img-fluid" alt="">
+              <img src="assets/img/realisations/logos/IMG-20221201-WA00025.jpg" class="img-fluid" alt="">
+              <img src="assets/img/realisations/logos/IMG-20221201-WA00027.jpg" class="img-fluid" alt="">
+              <img src="assets/img/realisations/logos/IMG-20221201-WA00031.jpg" class="img-fluid" alt="">
               
 
               <div class="portfolio-info">
