--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Papa Abdou Diack</h1>
-      <p>je suis <span class="typed" data-typed-items="Biologiste, Designer, Developpeur, Digital marketeur"></span></p>
+      <p>je suis <span class="typed" data-typed-items="Biologiste, Designer, Developpeur web, Digital marketeur"></span></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -102,7 +102,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>plus haut diplome:</strong> <span>Master</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>plus haut diplome:</strong> <span>Master 2</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>adresse mail:</strong> <span>abdoudiack96@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
@@ -207,6 +207,14 @@
             </div>
 
           </div>
+          <div class="progress">
+            <span class="skill">Python<i class="val">80%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+
+        </div>
 
           <div class="col-lg-6">
 
@@ -227,7 +235,7 @@
             <div class="progress">
               <span class="skill">Photoshop <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
             <div class="progress">
@@ -237,6 +245,12 @@
               </div>
             </div>
 
+          </div>
+          <div class="progress">
+            <span class="skill">React<i class="val">75%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
           </div>
 
         </div>
