--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Papa abdou Diack</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <p>vous pouvez me contacter via mes differents reseaux sociaux</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
