ajout de biologiste au titre

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <img src="assets\img\photo3.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Developpeur web &amp; Digital Marketeur.</h3>
+            <h3>Developpeur web &amp; Digital Marketeur &amp; Biologiste.</h3>
             <p class="fst-italic">
               En tant que biologiste de formation devenu développeur full-stack et spécialiste du marketing digital, je suis ouvert à toute opportunité de travail ou de collaboration pour mettre mes compétences pluridisciplinaires au service de projets innovant.
             </p>
