--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
+     
       <div class="container" data-aos="fade-up">
+
 
         <div class="section-title">
           <h2 >a propos</h2>
@@ -96,7 +98,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ages:</strong> <span>26 ans</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.diacksoftware.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.papa-abdoudiack.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Numero:</strong> <span>+221 772271093</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Adresse:</strong> <span>Dakar , Senegal</span></li>
                 </ul>
@@ -214,9 +216,9 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Git/Github <i class="val">80%</i></span>
+              <span class="skill">Git/Github <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -228,21 +230,21 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">75%</i></span>
+              <span class="skill">Photoshop <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">bootstrap <i class="val">75%</i></span>
+              <span class="skill">bootstrap <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">React <i class="val">75%</i></span>
+              <span class="skill">React <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
