ajout de la meta name description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>mon cv - Index</title>
-  <meta content="" name="description">
+  <meta name="description" content="mon portfolio personnel contenant mes realisations et mon cv ainsi que mes contacts">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
