ajout de la meta description

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                 </svg>
                 <i class="bi bi-code"></i>
               </div>
-              <h4><a href="">Developpement web</a></h4>
+              <h4><a href="https://www.facebook.com/profile.php?id=100063995447065">Developpement web</a></h4>
               <p>Creation d'application web et de sites web</p>
             </div>
           </div>
@@ -547,7 +547,7 @@
                 </svg>
                 <i class="bx bi-bezier"></i>
               </div>
-              <h4><a href="">Design et graphisme</a></h4>
+              <h4><a href="https://www.facebook.com/profile.php?id=100063995447065">Design et graphisme</a></h4>
               <p>Creation d'identite visuel, de logos, de flyers, brochure, d'affiches d'etiquettes et de maquettes</p>
             </div>
           </div>
@@ -560,7 +560,7 @@
                 </svg>
                 <i class="bi bi-bar-chart-fill"></i>
               </div>
-              <h4><a href="">Digital Marketing</a></h4>
+              <h4><a href="https://www.facebook.com/profile.php?id=100063995447065">Digital Marketing</a></h4>
               <p>community management , SEO, inbound marketing, facebook ADS, google ADS, Content Marketing, Emailing...</p>
             </div>
           </div>
