--- a/index.html
+++ b/index.html
@@ -207,6 +207,12 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+            <div class="progress">
+              <span class="skill">vue.js <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
 
           </div>
           
@@ -243,6 +249,12 @@
             </div>
             <div class="progress">
               <span class="skill">React <i class="val">85%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">React-Native <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -343,7 +355,7 @@
         <div class="container" data-aos="fade-up">
   
           <div class="section-title">
-            <h2>Logos</h2>
+            <h2>quelques logos crees</h2>
           </div>
   
           <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
