ajout d'un meta

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>mon cv - Index</title>
   <meta name="description" content="mon portfolio personnel contenant mes realisations et mon cv ainsi que mes contacts">
   <meta content="" name="keywords">
+  <meta name='ir-site-verification-token' value='2082182486'>
 
   <!-- Favicons -->
   <link href="assets/img/mon-logo.png" rel="icon">
